@@ -6,7 +6,6 @@ import ar.edu.unq.desapp.grupof.backendcriptop2papi.model.InvestmentAccount;
 import ar.edu.unq.desapp.grupof.backendcriptop2papi.model.Transaction;
 import ar.edu.unq.desapp.grupof.backendcriptop2papi.model.exceptions.OperationNotFoundException;
 import ar.edu.unq.desapp.grupof.backendcriptop2papi.model.operation.Operation;
-import ar.edu.unq.desapp.grupof.backendcriptop2papi.persistence.InvestmentAccountRepository;
 import ar.edu.unq.desapp.grupof.backendcriptop2papi.persistence.OperationRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.Authentication;
@@ -15,7 +14,6 @@ import org.springframework.stereotype.Service;
 import javax.transaction.Transactional;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class OperationService {
@@ -35,9 +33,9 @@ public class OperationService {
 
         List<Operation> operations = operationRepository.findActiveOperationsByAccountId(investmentAccount.getId());
 
-        operations = operations.stream().filter(operation -> operation.isActive()).collect(Collectors.toList());
+        operations = operations.stream().filter(Operation::isActive).toList();
 
-        return operations.stream().map(operation -> OperationDTO.fromModel(operation)).toList();
+        return operations.stream().map(OperationDTO::fromModel).toList();
     }
 
     public TransactionDTO transact(Long operationId, Authentication authentication) {
@@ -64,6 +62,6 @@ public class OperationService {
     }
 
     public Operation getOperationById(Long anOperationId) {
-        return operationRepository.findById(anOperationId).orElseThrow(() -> new OperationNotFoundException());
+        return operationRepository.findById(anOperationId).orElseThrow(OperationNotFoundException::new);
     }
 }
